# crypto_benchmark

./: CMakeLists.txt  README.md  main.cpp
include/: compress_perf.hpp  crypto_perf.hpp  display.hpp  ed25519_perf.hpp  hash_perf.hpp
src/: compress_perf.cpp  crypto_perf.cpp  display.cpp  ed25519_perf.cpp  hash_perf.cpp
